nuevas vistas y estilo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,58 @@
-<ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+<mat-drawer-container *ngIf="routeService.menu" class="app-container" autosize>
+  <mat-drawer #drawer class="alarma-sidenav" mode="side" opened="true">
+    <mat-toolbar class="example-header">Menu</mat-toolbar>
+    <mat-list>
+      <div mat-subheader>Opciones</div>
+      <mat-divider></mat-divider>
+      <mat-list-item routerLink="/home" routerLinkActive="actived">
+        <mat-icon matListItemIcon fontIcon="today"></mat-icon>
+        <div matListItemTitle>Inicio</div>
+      </mat-list-item>
+      <mat-list-item routerLink="/crear-alarma" routerLinkActive="actived">
+        <mat-icon matListItemIcon fontIcon="schedule"></mat-icon>
+        <div matListItemTitle>Crear alarma</div>
+      </mat-list-item>
+      <mat-list-item routerLink="/crear-medicamento" routerLinkActive="actived">
+        <mat-icon matListItemIcon fontIcon="health_and_safety"></mat-icon>
+        <div matListItemTitle>Crear medicamento</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+    </mat-list>
+  </mat-drawer>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
+  <div class="alarma-sidenav-content">
+    <mat-toolbar color="primary">
+      <button
+        mat-icon-button
+        class="example-icon"
+        aria-label="Example icon-button with menu icon"
+        (click)="drawer.toggle()"
+      >
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>{{ routeService.title }}</span>
+      <span class="example-spacer"></span>
+      <button
+        mat-icon-button
+        class="example-icon favorite-icon"
+        aria-label="Example icon-button with heart icon"
+      >
+        <mat-icon>account_circle</mat-icon>
+      </button>
+    </mat-toolbar>
 
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
+    <div class="container">
+      <router-outlet> </router-outlet>
+    </div>
+  </div>
+</mat-drawer-container>
+<mat-drawer-container *ngIf="!routeService.menu" class="app-container" autosize>
+  <div class="alarma-sidenav-content">
+    <mat-toolbar color="primary">
 
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+    </mat-toolbar>
+    <div class="container">
+      <router-outlet> </router-outlet>
+    </div>
+  </div>
+</mat-drawer-container>
