--- a/src/global.scss
+++ b/src/global.scss
@@ -18,6 +18,7 @@
 @import "~@ionic/angular/css/typography.css";
 @import '~@ionic/angular/css/display.css';
 @import './theme/styles.scss';
+@import './theme/variables.scss';
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
