--- a/src/app/crear-medicamento/crear-medicamento.component.html
+++ b/src/app/crear-medicamento/crear-medicamento.component.html
@@ -5,7 +5,7 @@
 	</mat-form-field>
 
 	<section appearance="outline">
-		<label>Color y Forma</label>
+		<label class="color-label">Color y Forma</label>
 		<div class="div-columns">
 			<mat-icon fontIcon="radio_button_unchecked"></mat-icon>
 			<mat-icon fontIcon="water_drop"></mat-icon>
