--- a/src/app/crear-medicamento/crear-medicamento.component.scss
+++ b/src/app/crear-medicamento/crear-medicamento.component.scss
@@ -1,3 +1,4 @@
+@import "../../theme/variables.scss";
 .actions {
 	display: flex;
 	padding: 8px;
@@ -6,9 +7,12 @@
 	padding: 3%;
 	button {
 		border-radius: 12px;
-		min-width: 200px;
 		color: #ffffff;
 	}
+}
+
+.color-label{
+	color: $accent;
 }
 
 mat-card {
@@ -60,5 +64,5 @@ mat-icon {
 }
 
 mat-icon:hover  {
-	background-color: rgb(180, 185, 185);
+	background-color:  $accent;
 }
