--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -33,7 +33,7 @@
 		<button mat-raised-button color="accent" routerLink="/ingreso">
 			Cancelar
 		</button>
-		<button mat-raised-button color="primary" routerLink="/home">
+		<button mat-raised-button color="primary" (click)="openDialog()">
 			Registrarme
 		</button>
 	</div>
