--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,8 @@
 	width: 85%;
 	align-content: space-between;
 	justify-content: center;
-	margin: 50px auto;
+	margin: 0px auto;
+  padding-top: 30px;
 	position: relative;
 }
+
