--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,8 +1,10 @@
-<h1 mat-dialog-title>¿Esta seguro que desea eliminar? </h1>
+<h1 mat-dialog-title>{{data.title}} </h1>
 <div mat-dialog-content>
-	<p>Esta accion sera permanente</p>
+	<p>{{data.subtitle}}</p>
 </div>
 <div mat-dialog-actions>
-	<button mat-raised-button color="accent" (click)="onNoClick()">Cancelar</button>
-	<button mat-raised-button   color="primary" (click)="onNoClick()" cdkFocusInitial>Aceptar</button>
+	<button mat-raised-button color="accent" *ngIf="data.back==true" (click)="onNoClick()">Cancelar</button>
+	<button mat-raised-button color="accent" *ngIf="data.back=='close'" (click)="onNoClick()">Cancelar</button>
+	<button mat-raised-button   color="primary" *ngIf="data.next==='route'" (click)="navigate(data.routeNext)" cdkFocusInitial>Aceptar</button>
+	<button mat-raised-button   color="primary" *ngIf="data.next==='close'" (click)="onNoClick()" cdkFocusInitial>Aceptar</button>
 </div>
