--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,23 +19,15 @@ mat-card{
 
 h3{
 	font-weight: normal;
-
-}
-
-.date-selector{
-	position: absolute;
-	right: 0;
-	top: 0;
 }
 
 .card-type{
-	font-size: 2em;
+	font-size: 1em;
 	background-color: $primary;
 	border-radius: 50%;
-	padding: 10px 10px;
-	width: 60px;
-	height: 60px;
-	box-sizing: border-box;
+	padding: 5px 5px;
+	width:30px;
+	height: 30px;
 	text-align: center;
 
 }
@@ -46,25 +38,17 @@ h3{
 	background-color: $accent;
 }
 .title-card{
-	font-size: 1.5em;
-	margin-bottom: 10px;
+	font-size: 1.2em;
 }
 .subtitle-card{
-	font-size: 1em;
+	font-size: .8em;
 }
 
 .card-actions{
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
 }
 .card-actions> mat-icon,
 .card-actions> mat-slide-toggle{
-	padding: 10px;
 	margin: 0 5px;
-
-
-
 }
 .card-actions> mat-icon{
 	background-color: #f6f7f8;
