agregar conectar con google

--- a/src/app/crear-medicamento/crear-medicamento.component.html
+++ b/src/app/crear-medicamento/crear-medicamento.component.html
@@ -34,8 +34,8 @@
 	<mat-form-field appearance="outline">
 		<mat-label>Composición</mat-label>
 		<mat-select>
-			<mat-option>800 Miligramos</mat-option>
-			<mat-option>1000 Miligramos</mat-option>
+			<mat-option value="800">800 Miligramos</mat-option>
+			<mat-option value="1000">1000 Miligramos</mat-option>
 		</mat-select>
 	</mat-form-field>
 
