--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item routerLink="/ingreso" routerLinkActive="actived">
-        <mat-icon matListItemIcon fontIcon="health_and_safety"></mat-icon>
+        <mat-icon matListItemIcon fontIcon="circle"></mat-icon>
         <div matListItemTitle>Cerrar sesión</div>
       </mat-list-item>
     </mat-list>
