--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,8 @@
 	<h3 *ngIf="i===5">
 		02:00 PM
 	</h3>
-	<mat-card  class="mat-elevation-z4" [class.inactive]="!alarma.active" [class.active]="alarma.active">
+	<mat-card  class="mat-elevation-z4" [class.inactive]="!alarma.active"
+             [class.active]="alarma.active" [routerLink]="['/ver-alarma', alarma]">
 		<mat-card-content class="flex justify-content-between">
 				<div class="flex-none card-type-box flex align-items-center justify-content-center">
 					<div class="card-type {{alarma.tipo}}">
@@ -22,8 +23,6 @@
 					<div class="subtitle-card">{{alarma.subtitle}}</div>
 				</div>
 				<div class="flex-none card-actions flex align-items-center justify-content-center">
-					<!--<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="edit" routerLink="/editar-alarma"></mat-icon>
-					<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="delete" color="warn" (click)="openDialog()"></mat-icon>-->
 					<mat-slide-toggle [checked]="alarma.active" (change)="changeStatus(i,$event)" color="primary"  ></mat-slide-toggle>
 			</div>
 		</mat-card-content>
