--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -54,7 +54,8 @@ button[mat-raised-button] {
   justify-content: end !important;
   align-content: flex-end;
 }
+
 .mat-mdc-dialog-container .mdc-dialog__surface{
-  border-radius: 20px;
+  border-radius: 20px !important;
 }
 
