--- a/src/app/editar-alarma/editar-alarma.component.html
+++ b/src/app/editar-alarma/editar-alarma.component.html
@@ -5,6 +5,7 @@
 	</section>
 	<mat-form-field *ngIf="medicamento" appearance="outline">
 		<mat-label>Medicamento</mat-label>
+    <mat-hint>Seleccione su medicamento</mat-hint>
 		<mat-select value="acetaminofen">
 			<mat-option value="acetaminofen">Acetaminofen 80 mg</mat-option>
 			<mat-option value="lozartan" >Lozartan 250 mg</mat-option>
@@ -12,12 +13,13 @@
 	</mat-form-field>
 	<mat-form-field appearance="outline" *ngIf="!medicamento">
 		<mat-label>Nombre del evento</mat-label>
+    <mat-hint>Digite el nombre del evento</mat-hint>
 		<input type="text" matInput />
 	</mat-form-field>
 	<mat-form-field appearance="outline">
-		<mat-label>Seleccione la fecha</mat-label>
+		<mat-label>HH:MM DD/MM/YYYY</mat-label>
 		<input [formControl]="date" matInput [matDatepicker]="picker" />
-		<mat-hint>HH:MM DD/MM/YYYY</mat-hint>
+		<mat-hint>Seleccione la fecha</mat-hint>
 		<mat-datepicker-toggle
 			matIconSuffix
 			[for]="picker"
@@ -26,6 +28,7 @@
 	</mat-form-field>
 	<mat-form-field appearance="outline" *ngIf="medicamento">
 		<mat-label>Dosis</mat-label>
+    <mat-hint>Seleccione dosis</mat-hint>
 		<mat-select value="uno">
 			<mat-option value="uno">Una cada vez</mat-option>
 			<mat-option value="dos">Dos cada vez</mat-option>
@@ -33,6 +36,7 @@
 	</mat-form-field>
 	<mat-form-field appearance="outline">
 		<mat-label>Repetición</mat-label>
+    <mat-hint>Seleccione repetición</mat-hint>
 		<mat-select value="doce">
 			<mat-option value="ocho">Cada 8 horas</mat-option>
 			<mat-option value="doce">Cada 12 horas</mat-option>
@@ -41,6 +45,7 @@
 	<mat-card class="mat-column">
 		<mat-form-field appearance="outline">
 			<mat-label>Tiene Fin</mat-label>
+      <mat-hint>Seleccione si tiene fin</mat-hint>
 			<mat-select value="si">
 				<mat-option value="si">Si</mat-option>
 				<mat-option value="no">No</mat-option>
@@ -48,9 +53,9 @@
 		</mat-form-field>
 
 		<mat-form-field appearance="outline">
-			<mat-label>Seleccione Fecha</mat-label>
+			<mat-label>DD/MM/YYYY</mat-label>
 			<input  matInput [matDatepicker]="pickera" [formControl]="date" />
-			<mat-hint>DD/MM/YYYY</mat-hint>
+			<mat-hint>Seleccione Fecha</mat-hint>
 			<mat-datepicker-toggle
 				matIconSuffix
 				[for]="pickera"
