--- a/src/app/ingreso/ingreso.component.html
+++ b/src/app/ingreso/ingreso.component.html
@@ -3,10 +3,12 @@
 	<mat-form-field appearance="outline">
 		<mat-label>Correo</mat-label>
 		<input type="text" matInput />
+    <mat-hint>Digite su correo</mat-hint>
 	</mat-form-field>
 
 	<mat-form-field appearance="outline">
 		<mat-label>Contraseña</mat-label>
+    <mat-hint>Digite su contraseña</mat-hint>
 		<input type="password" matInput />
 	</mat-form-field>
   <span class="span-contrasena" routerLink="/recuperar-contrasena">Olvide mi contraseña</span>
