--- a/src/app/crear-alarma/crear-alarma.component.html
+++ b/src/app/crear-alarma/crear-alarma.component.html
@@ -59,7 +59,7 @@
 		</mat-form-field>
 	</mat-card>
 	<mat-card class="actions">
-		<button mat-raised-button color="accent" routerLink="/home">Cancelar</button>
-		<button mat-raised-button color="primary" routerLink="/home">Guardar</button>
+		<button mat-raised-button color="accent" (click)="goToday()">Cancelar</button>
+		<button mat-raised-button color="primary" (click)="goToday()">Guardar</button>
 	</mat-card>
 </mat-card>
