--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -1,9 +1,8 @@
 @import "../../theme/variables.scss";
 h1 {
-  margin-top: 20px;
-  font-size: 24px;
-  padding-left: 5%;
-  padding-right: 5%;
+  font-size: 1.2em !important;
+  color: #666666;
+  padding:0.8em;
 }
 
 .div-icon{
